--- a/grafana/config/custom.ini
+++ b/grafana/config/custom.ini
@@ -213,8 +213,8 @@ default_theme = light
 [auth.github]
 enabled = true
 allow_sign_up = true
-client_id = b10aeb57f9c0cd2056e0
-client_secret = e6dedfddab8a3e04f78124998e7c96afadf3ee0c
+client_id = ---removed---
+client_secret = ---removed---
 scopes = user:email,read:org
 auth_url = https://github.com/login/oauth/authorize
 token_url = https://github.com/login/oauth/access_token
@@ -226,8 +226,8 @@ token_url = https://github.com/login/oauth/access_token
 [auth.google]
 enabled = true
 allow_sign_up = true
-client_id = 353419319434-0gdbg0h4vhnc1h3vutpdqmm090k4vcip.apps.googleusercontent.com
-client_secret = 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
+client_id = ---removed---
+client_secret = ---removed---
 scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
 auth_url = https://accounts.google.com/o/oauth2/auth
 token_url = https://accounts.google.com/o/oauth2/token
